--- a/public/404.html
+++ b/public/404.html
@@ -1,17 +1,21 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html
+        PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
+
 <head>
-<title>Error 404</title>
-<link rel="stylesheet" href="/css/error.css" />
-<meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
+        <title>Error 404</title>
+        <link rel="stylesheet" href="/css/error.css" />
+        <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
 </head>
+
 <body>
-<h1>Error 404</h1>
-<div id="content">
-<h2>Page Not Found</h2><p>Sorry, this is the void.</p>
-</div>
-<div id="footer">
-</div>
+        <h1>Error 404</h1>
+        <div id="content">
+                <h2>Page Not Found</h2>
+                <p>Sorry, this is the void.</p>
+        </div>
+        <div id="footer">
+        </div>
 </body>
+
 </html>
